--- a/ui/src/app/login/login.component.html
+++ b/ui/src/app/login/login.component.html
@@ -1,12 +1,12 @@
-<div style="margin: auto; width: 20%; text-align: center;">
-  <table>
+<div>
+  <table style="width: 100%;">
     <tr>
       <td>User name:</td>
-      <td><input type="text" class="form-control" id="username" placeholder="Enter user name" [(ngModel)]="username"></td>
+      <td><input type="text" class="form-control" id="loginUserName" placeholder="Enter user name" [(ngModel)]="username"></td>
     </tr>
     <tr>
       <td>Password:</td>
-      <td><input type="password" class="form-control" id="password" placeholder="Enter password" [(ngModel)]="password"></td>
+      <td><input type="password" class="form-control" id="loginPassword" placeholder="Enter password" [(ngModel)]="password"></td>
     </tr>
     <tr>
       <td colspan="2"><button class="btn btn-primary" (click)="login()">Login</button></td>
