--- a/ui/src/app/reservation/reservation.component.css
+++ b/ui/src/app/reservation/reservation.component.css
@@ -15,3 +15,12 @@
 .custom-day.faded {
   background-color: rgba(2, 117, 216, 0.5);
 }
+
+.alert-container {
+  z-index: 2000;
+  float: right;
+  width: 20%;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+}
