--- a/ui/src/app/login/login.component.html
+++ b/ui/src/app/login/login.component.html
@@ -2,17 +2,27 @@
   <table style="width: 100%;">
     <tr>
       <td>User name:</td>
-      <td><input type="text" class="form-control" id="loginUserName" placeholder="Enter user name" [(ngModel)]="username"></td>
+      <td><input type="text" class="form-control" id="loginUserName" placeholder="Enter user name" [(formControl)]="username"></td>
     </tr>
     <tr>
       <td>Password:</td>
-      <td><input type="password" class="form-control" id="loginPassword" placeholder="Enter password" [(ngModel)]="password"></td>
+      <td><input type="password" class="form-control" id="loginPassword" placeholder="Enter password" [(formControl)]="password"></td>
     </tr>
     <tr>
       <td colspan="2"><button class="btn btn-primary" (click)="login()">Login</button></td>
     </tr>
     <tr>
       <td colspan="2"><button class="btn btn-primary" (click)="navigateToSignup()">Sign up</button></td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <div *ngIf="username.invalid && (username.dirty || username.touched)" class="alert alert-danger">
+            <span *ngIf="username.errors.required">User name is required.</span>
+        </div>
+        <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
+          <span *ngIf="password.errors.required">Password is required.</span>
+        </div>
+      </td>
     </tr>
   </table>
 </div>
