--- a/ui/src/app/reservation/reservation.component.html
+++ b/ui/src/app/reservation/reservation.component.html
@@ -1,9 +1,3 @@
-<div id="alertPlaceHolder" class="alert-container">
-  <p *ngFor="let alert of alerts">
-    <ngb-alert [type]="alert.type" (close)="close(alert)">{{ alert.message }}</ngb-alert>
-  </p>
-</div>
-
 <div id="searchTerms" style="margin: auto; width: 30%; text-align: center;">
   <ngb-datepicker #dp (select)="onDateSelection($event)" [minDate]="minDate" [maxDate]="maxDate" [displayMonths]="2" [dayTemplate]="t" outsideDays="hidden">
     </ngb-datepicker>
@@ -27,11 +21,11 @@
         HOTEL FACILITIES:<br>
         <span class="badge badge-dark" style="margin-right: .25em;" *ngFor="let feature of hotel.extra_features">{{feature}}</span><br>
         Stars: <ngb-rating [(rate)]="hotel.stars" [readonly]="true" [max]="5"></ngb-rating><br>
-        User ratings: <ngb-rating [(rate)]="hotel.userRatings" (rateChange)="rate(hotel, content)" [max]="5"></ngb-rating><br>
+        User ratings: <ngb-rating [(rate)]="hotel.userRatings" (rateChange)="rate(hotel, authDiagContent)" [max]="5"></ngb-rating><br>
         Available rooms:
         <hr>
         <div id="{{room._id}}" *ngFor="let room of hotel.rooms">
-          <button class="btn btn-primary" style="float: right" (click)="reserve(hotel._id, room._id, content)" *ngIf="room.remaining > 0">Reserve</button>
+          <button class="btn btn-primary" style="float: right" (click)="reserve(hotel._id, room._id, authDiagContent)" *ngIf="room.remaining > 0">Reserve</button>
           Number of beds: {{room.number_of_beds}}<br>
           ROOM FACILITIES:<br>
           <span class="badge badge-secondary" style="margin-right: .25em;" *ngFor="let feature of room.extra_features">{{feature}}</span><br>
@@ -42,19 +36,4 @@
         </div>
       </div>
   </div>
-</div>
-<div>
-  <ng-template #content let-model>
-      <div class="modal-header">
-          <h4 class="modal-title" id="modal-basic-title" *ngIf="activeDialog.get('login')">Login</h4>
-          <h4 class="modal-title" id="modal-basic-title" *ngIf="activeDialog.get('signup')">Sign up</h4>
-          <button type="button" class="close" aria-label="Close" (click)="closeDialog('Cross click')">
-            <span aria-hidden="true">&times;</span>
-          </button>
-      </div>
-      <div class="modal-body">
-        <app-login [activeDialog]="activeDialog" [alerts]="alerts" [dialog]="openedDialog" *ngIf="activeDialog.get('login')"></app-login>
-        <app-signup [activeDialog]="activeDialog" [alerts]="alerts" *ngIf="activeDialog.get('signup')"></app-signup>
-      </div>
-    </ng-template> 
 </div>
