--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -20,6 +20,6 @@
   </p>
 </div>
 
-<div style="margin: auto;width: 30%;text-align: center;">
+<div style="margin: auto;width: 30%;text-align: center; margin-top: 1em">
   <router-outlet></router-outlet>
 </div>
