--- a/ui/src/app/reservation/reservation.component.html
+++ b/ui/src/app/reservation/reservation.component.html
@@ -1,4 +1,5 @@
 <div id="searchTerms">
+  <input type="text" class="form-control" id="cityName" placeholder="City name" [(ngModel)]="cityName"><br>
   <ngb-datepicker #dp (select)="onDateSelection($event)" [minDate]="minDate" [maxDate]="maxDate" [displayMonths]="2" [dayTemplate]="t" outsideDays="hidden">
     </ngb-datepicker>
     
@@ -18,6 +19,7 @@
   <div id="{{hotel._id}}" class="card" style="margin-bottom: 1em;" *ngFor="let hotel of hotels">
       <div class="card-body">
         <h3 class="card-title">{{hotel.name}}</h3>
+        City: {{hotel.city}}<br>
         HOTEL FACILITIES:<br>
         <span class="badge badge-dark" style="margin-right: .25em;" *ngFor="let feature of hotel.extraFeatures">{{feature}}</span><br>
         Stars: <ngb-rating [(rate)]="hotel.stars" [readonly]="true" [max]="5"></ngb-rating><br>
